AC_INIT([Saltarello], [1.0], [sepen@crux-arm.nu])
AM_INIT_AUTOMAKE([foreign])
AC_PROG_CC
AC_PROG_CXX
AC_LANG([C++])

PKG_CHECK_MODULES([SDL2], [sdl2])
PKG_CHECK_MODULES([SDL2_TTF], [sdl2_ttf])
PKG_CHECK_MODULES([SDL2_MIXER], [sdl2_mixer])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
